--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -437,7 +437,7 @@
 		}
 	</div>
 
-	<div style="margin-bottom: 60px; margin-top: 20px; margin-left: auto; margin-right: auto; width: 400px;">
+	<div style="margin-bottom: 60px; margin-top: 20px; text-align: center;">
 		<a class="boton-pequeño" style="padding: 15px 20px; font-size: 17px; text-align: center; min-width: 300px; width: auto;" href="/last-news">
 			@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastNewsMore")
 		</a>
