--- a/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components;
 @using Microsoft.AspNetCore.Components.Web;
+@using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Mvc;
 @using Microsoft.AspNetCore.Mvc.Razor;
@@ -29,7 +30,9 @@
 </style>
 
 <div class="menu-dropdown">
-    <button class="texto-cabecera" style="border: 0px; margin-left: 0px; margin-right: 30px;"><i class="fa-solid fa-bars" style="font-size: 20px; line-height: 40px;"></i></button>
+    <button class="texto-cabecera" style="border: 0px; margin-left: 0px; margin-right: 30px;">
+        <i class="fa-solid fa-bars" style="font-size: 20px; line-height: 40px;"></i>
+    </button>
     
     @if (resultados.Count == 0)
     {
@@ -169,26 +172,27 @@
                                         resultadosFinal = resultadosSoftware;
                                     }
 
-                                    @foreach (var juego in resultadosFinal)
-                                    {
-                                        <div class="perfil-flexible-centrado" style="margin-top: 10px;">
-                                            <a class="boton-pequeño" href="/game/@juego.Id/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/" style="padding: 0px;">
-                                                <div class="perfil-flexible-centrado">
-                                                    <div>
-                                                        <img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 107px;" />
-                                                    </div>
+                                    <Virtualize Context="juego" Items="resultadosFinal">
+				                        <ItemContent>
+                                            <div class="perfil-flexible-centrado" style="margin-top: 10px;">
+                                                <a class="boton-pequeño" href="/game/@juego.Id/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/" style="padding: 0px;">
+                                                    <div class="perfil-flexible-centrado">
+                                                        <div>
+                                                            <img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 107px;" />
+                                                        </div>
 
-                                                    <div style="width: 100%; padding-left: 15px; padding-right: 15px;">
-                                                        @juego.Nombre
-                                                    </div>
+                                                        <div style="width: 100%; padding-left: 15px; padding-right: 15px;">
+                                                            @juego.Nombre
+                                                        </div>
 
-                                                    <div style="padding: 20px; min-width: 200px; text-align: center;">
-                                                        @GenerarMensaje(juego)
+                                                        <div style="padding: 20px; min-width: 200px; text-align: center;">
+                                                            @GenerarMensaje(juego)
+                                                        </div>
                                                     </div>
-                                                </div>
-                                            </a>
-                                        </div>
-                                    }
+                                                </a>
+                                            </div>
+					                    </ItemContent>
+					                </Virtualize>
                                 }
                             </div>
                         </div>
