--- a/pepeizqs deals web/Pages/historical-lows.cshtml
+++ b/pepeizqs deals web/Pages/historical-lows.cshtml
@@ -8,6 +8,11 @@
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.ServerPrerendered, new { 
-	idioma = @Model.idioma
+<div id="cargando" style="width: 100%; display: flex; align-items: center; justify-content: center;">
+	<span class="cargando"></span>
+</div>
+
+@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.Server, new { 
+	idioma = Model.idioma,
+	cargando = "cargando"
 }))
